<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.hcs.activities"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

   
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size20"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
      
            android:orientation="vertical" >

           <EditText 
               android:id="@+id/fromCityName"
               android:layout_width="match_parent"
               android:layout_height="40dp"
               
               android:editable="false"
                  android:background="@drawable/layout_bg"
               android:padding="5dp"
               android:hint="@string/hint_city"/>

          <EditText 
              android:id="@+id/toCityName"
              android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="40dp"
                  android:background="@drawable/layout_bg"
                  android:editable="false"
               android:padding="5dp"
               android:hint="@string/hint_city"/>
           <EditText 
               android:id="@+id/departureDate"
              android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="40dp"
                  android:background="@drawable/layout_bg"
                  android:editable="false"
               android:padding="5dp"
               android:hint="@string/hint_departure_date"/>
           
           <EditText 
               android:id="@+id/returnDate"
              android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="40dp"
                  android:background="@drawable/layout_bg"
                  android:editable="false"
               android:padding="5dp"
               android:hint="@string/hint_return_date"/>
           
           <Spinner 
               android:id="@+id/cabType"
              android:layout_marginTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:background="@drawable/layout_bg"
              android:editable="false"
              android:padding="5dp"
              android:hint="@string/hint_cab_type"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
              
                android:gravity="center"
                app:cardBackgroundColor="#095B9C"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Book Now"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>