<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.hcs.activities"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size20"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size10"
                android:layout_marginRight="@dimen/size10"
                android:layout_marginTop="@dimen/size10" >

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                 
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                 android:id="@+id/pass_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10"
                android:layout_marginLeft="@dimen/size10"
                android:layout_marginRight="@dimen/size10"
                android:layout_marginTop="@dimen/size10" >

                <EditText
                    android:id="@+id/edit_text_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pass"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                 android:id="@+id/rePass_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10"
                android:layout_marginLeft="@dimen/size10"
                android:layout_marginRight="@dimen/size10"
                android:layout_marginTop="@dimen/size10" >

                <EditText
                    android:id="@+id/edit_text_re_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_re_pass"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                 android:id="@+id/fullName_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10"
                android:layout_marginLeft="@dimen/size10"
                android:layout_marginRight="@dimen/size10"
                android:layout_marginTop="@dimen/size10" >

                <EditText
                    android:id="@+id/edit_text_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_full_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                 android:id="@+id/mobileNumbaer_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10"
                android:layout_marginLeft="@dimen/size10"
                android:layout_marginRight="@dimen/size10"
                android:layout_marginTop="@dimen/size10" >

                <EditText
                    android:id="@+id/edit_text_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mobile_number"
                    android:inputType="text|phone" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="onRegister"
                android:gravity="center"
                app:cardBackgroundColor="#095B9C"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Sign Up"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>